fix(api): addresses feedback, implements shared-types.go to prevent duplication in owner spec
