# api/openapi/owner-server-generated.go
@@ -1,3 +1,5 @@
+//go:build go1.22
+
 // Package openapi provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
@@ -6,9 +8,7 @@ package openapi
 import (
 	"fmt"
 	"net/http"
-	"time"
 
-	"github.com/go-chi/chi/v5"
 	"github.com/oapi-codegen/runtime"
 )
 
@@ -17,12 +17,6 @@ const (
 	Http  OwnerRedirectProtocol = "http"
 	Https OwnerRedirectProtocol = "https"
 )
-
-// HealthResponse defines model for HealthResponse.
-type HealthResponse struct {
-	Status  string `json:"status"`
-	Version string `json:"version"`
-}
 
 // OwnerRedirect defines model for OwnerRedirect.
 type OwnerRedirect = []struct {
@@ -33,28 +27,6 @@ type OwnerRedirect = []struct {
 
 // OwnerRedirectProtocol defines model for OwnerRedirect.Protocol.
 type OwnerRedirectProtocol string
-
-// VoucherInsertResponse defines model for VoucherInsertResponse.
-type VoucherInsertResponse struct {
-	Errors    *[]string `json:"errors,omitempty"`
-	Inserted  int       `json:"inserted"`
-	Processed int       `json:"processed"`
-}
-
-// VoucherMetadata defines model for VoucherMetadata.
-type VoucherMetadata struct {
-	CreatedAt  time.Time  `json:"created_at"`
-	DeviceInfo string     `json:"device_info"`
-	Guid       string     `json:"guid"`
-	UpdatedAt  *time.Time `json:"updated_at,omitempty"`
-}
-
-// VoucherResponse defines model for VoucherResponse.
-type VoucherResponse struct {
-	Encoding string `json:"encoding"`
-	Guid     string `json:"guid"`
-	Voucher  string `json:"voucher"`
-}
 
 // GetVouchersParams defines parameters for GetVouchers.
 type GetVouchersParams struct {
@@ -94,50 +66,6 @@ type ServerInterface interface {
 
 	// (GET /vouchers/{guid})
 	GetVouchersGuid(w http.ResponseWriter, r *http.Request, guid string)
-}
-
-// Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
-
-type Unimplemented struct{}
-
-// (GET /health)
-func (_ Unimplemented) GetHealth(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (GET /owner/redirect)
-func (_ Unimplemented) GetOwnerRedirect(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (POST /owner/redirect)
-func (_ Unimplemented) PostOwnerRedirect(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (PUT /owner/redirect)
-func (_ Unimplemented) PutOwnerRedirect(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (POST /owner/resell/{guid})
-func (_ Unimplemented) PostOwnerResellGuid(w http.ResponseWriter, r *http.Request, guid string) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (POST /owner/vouchers)
-func (_ Unimplemented) PostOwnerVouchers(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (GET /vouchers)
-func (_ Unimplemented) GetVouchers(w http.ResponseWriter, r *http.Request, params GetVouchersParams) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (GET /vouchers/{guid})
-func (_ Unimplemented) GetVouchersGuid(w http.ResponseWriter, r *http.Request, guid string) {
-	w.WriteHeader(http.StatusNotImplemented)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -213,7 +141,7 @@ func (siw *ServerInterfaceWrapper) PostOwnerResellGuid(w http.ResponseWriter, r 
 	// ------------- Path parameter "guid" -------------
 	var guid string
 
-	err = runtime.BindStyledParameterWithOptions("simple", "guid", chi.URLParam(r, "guid"), &guid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "guid", r.PathValue("guid"), &guid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "guid", Err: err})
 		return
@@ -287,7 +215,7 @@ func (siw *ServerInterfaceWrapper) GetVouchersGuid(w http.ResponseWriter, r *htt
 	// ------------- Path parameter "guid" -------------
 	var guid string
 
-	err = runtime.BindStyledParameterWithOptions("simple", "guid", chi.URLParam(r, "guid"), &guid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "guid", r.PathValue("guid"), &guid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "guid", Err: err})
 		return
@@ -375,72 +303,63 @@ func (e *TooManyValuesForParamError) Error() string {
 
 // Handler creates http.Handler with routing matching OpenAPI spec.
 func Handler(si ServerInterface) http.Handler {
-	return HandlerWithOptions(si, ChiServerOptions{})
+	return HandlerWithOptions(si, StdHTTPServerOptions{})
 }
 
-type ChiServerOptions struct {
+// ServeMux is an abstraction of http.ServeMux.
+type ServeMux interface {
+	HandleFunc(pattern string, handler func(http.ResponseWriter, *http.Request))
+	ServeHTTP(w http.ResponseWriter, r *http.Request)
+}
+
+type StdHTTPServerOptions struct {
 	BaseURL          string
-	BaseRouter       chi.Router
+	BaseRouter       ServeMux
 	Middlewares      []MiddlewareFunc
 	ErrorHandlerFunc func(w http.ResponseWriter, r *http.Request, err error)
 }
 
 // HandlerFromMux creates http.Handler with routing matching OpenAPI spec based on the provided mux.
-func HandlerFromMux(si ServerInterface, r chi.Router) http.Handler {
-	return HandlerWithOptions(si, ChiServerOptions{
-		BaseRouter: r,
+func HandlerFromMux(si ServerInterface, m ServeMux) http.Handler {
+	return HandlerWithOptions(si, StdHTTPServerOptions{
+		BaseRouter: m,
 	})
 }
 
-func HandlerFromMuxWithBaseURL(si ServerInterface, r chi.Router, baseURL string) http.Handler {
-	return HandlerWithOptions(si, ChiServerOptions{
+func HandlerFromMuxWithBaseURL(si ServerInterface, m ServeMux, baseURL string) http.Handler {
+	return HandlerWithOptions(si, StdHTTPServerOptions{
 		BaseURL:    baseURL,
-		BaseRouter: r,
+		BaseRouter: m,
 	})
 }
 
 // HandlerWithOptions creates http.Handler with additional options
-func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handler {
-	r := options.BaseRouter
+func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.Handler {
+	m := options.BaseRouter
 
-	if r == nil {
-		r = chi.NewRouter()
+	if m == nil {
+		m = http.NewServeMux()
 	}
 	if options.ErrorHandlerFunc == nil {
 		options.ErrorHandlerFunc = func(w http.ResponseWriter, r *http.Request, err error) {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 		}
 	}
+
 	wrapper := ServerInterfaceWrapper{
 		Handler:            si,
 		HandlerMiddlewares: options.Middlewares,
 		ErrorHandlerFunc:   options.ErrorHandlerFunc,
 	}
 
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/health", wrapper.GetHealth)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/owner/redirect", wrapper.GetOwnerRedirect)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/owner/redirect", wrapper.PostOwnerRedirect)
-	})
-	r.Group(func(r chi.Router) {
-		r.Put(options.BaseURL+"/owner/redirect", wrapper.PutOwnerRedirect)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/owner/resell/{guid}", wrapper.PostOwnerResellGuid)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/owner/vouchers", wrapper.PostOwnerVouchers)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/vouchers", wrapper.GetVouchers)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/vouchers/{guid}", wrapper.GetVouchersGuid)
-	})
+	m.HandleFunc("GET "+options.BaseURL+"/health", wrapper.GetHealth)
+	m.HandleFunc("GET "+options.BaseURL+"/owner/redirect", wrapper.GetOwnerRedirect)
+	m.HandleFunc("POST "+options.BaseURL+"/owner/redirect", wrapper.PostOwnerRedirect)
+	m.HandleFunc("PUT "+options.BaseURL+"/owner/redirect", wrapper.PutOwnerRedirect)
+	m.HandleFunc("POST "+options.BaseURL+"/owner/resell/{guid}", wrapper.PostOwnerResellGuid)
+	m.HandleFunc("POST "+options.BaseURL+"/owner/vouchers", wrapper.PostOwnerVouchers)
+	m.HandleFunc("GET "+options.BaseURL+"/vouchers", wrapper.GetVouchers)
+	m.HandleFunc("GET "+options.BaseURL+"/vouchers/{guid}", wrapper.GetVouchersGuid)
 
-	return r
+	return m
 }
